# embedded-storage-file

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: asyncronous.rs  backend_mmap.rs  backend_vec.rs  lib.rs  synhronous.rs
tests/: integration_test.rs
