[package]
name = "embedded-storage-file"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ra1u/embedded-storage-file.git"
description = "file and in-memory interface for embedded-storage and embedded-storage-async"

[dependencies]
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
memmap2 = "0.9.5"

[dev-dependencies]
rand = "0.9.0"
# runtime for async testing
tokio = {version="1.43.0", default-features = false, features = ["rt","macros"]}